@@ -3677,6 +3677,8 @@ STR_6485    :See-Through vehicles toggle
 STR_6486    :See-Through guests toggle
 STR_6487    :See-Through staff toggle
 STR_6488    :{RED}Guests are complaining about the length of the queues in your park.{NEWLINE}Consider shortening problematic queues, or increasing the rides’ throughput.
+STR_6489    :Set to tree-height
+STR_6490    :Local authority won’t allow construction above {STRINGID}!
 
 #############
 # Scenarios #
