@@ -8,10 +8,10 @@ struct ObjectRepositoryItem;
 namespace OpenRCT2
 {
     // Current version that is saved.
-    constexpr uint32_t PARK_FILE_CURRENT_VERSION = 0xA;
+    constexpr uint32_t PARK_FILE_CURRENT_VERSION = 0xB;
 
     // The minimum version that is forwards compatible with the current version.
-    constexpr uint32_t PARK_FILE_MIN_VERSION = 0x9;
+    constexpr uint32_t PARK_FILE_MIN_VERSION = 0xB;
 
     constexpr uint32_t PARK_FILE_MAGIC = 0x4B524150; // PARK
 
